@@ -30,6 +30,7 @@ Bugs fixed
 * #3533: Moving from Sphinx 1.3.1 to 1.5.3 breaks LaTeX compilation of links
   rendered as code
 * #2665, #2607: Link names in C++ docfields, and make it possible for other domains.
+* #3542: C++, fix parsing error of non-type template argument with template.
 
 Testing
 --------
